--- a/JricaStudioWebApi.csproj
+++ b/JricaStudioWebApi.csproj
@@ -24,4 +24,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\ProductImages\" />
+    <Folder Include="wwwroot\Images\ServiceImages\" />
+  </ItemGroup>
+
 </Project>
