--- a/JricaStudioWebApi.csproj
+++ b/JricaStudioWebApi.csproj
@@ -29,4 +29,10 @@
     <Folder Include="wwwroot\Images\ServiceImages\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Data\JaysLashes.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
