--- a/JricaStudioWebApi.csproj
+++ b/JricaStudioWebApi.csproj
@@ -27,6 +27,8 @@
   <ItemGroup>
     <Folder Include="wwwroot\Images\ProductImages\" />
     <Folder Include="wwwroot\Images\ServiceImages\" />
+    <Folder Include="wwwroot\Images\TestImages\ProductImages\" />
+    <Folder Include="wwwroot\Images\TestImages\ServiceImages\" />
   </ItemGroup>
 
   <ItemGroup>
