--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Data/JaysLashes.db
+/Data/JaysLashes.db-shm
+/Data/JaysLashes.db-wal
