Synced project data with Production Database Updated the Blockout dates table in the database with new fields and updated a few methods to work as intended when duplicated data in the database.

--- a/JricaStudioWebApi.csproj
+++ b/JricaStudioWebApi.csproj
@@ -28,8 +28,6 @@
   <ItemGroup>
     <Folder Include="Migrations\" />
     <Folder Include="Services\Contracts\" />
-    <Folder Include="wwwroot\Images\ProductImages\" />
-    <Folder Include="wwwroot\Images\ServiceImages\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -38,7 +36,7 @@
 
   <ItemGroup>
     <None Update="Data\JaysLashes.db">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
