--- a/JricaStudioWebApi.csproj
+++ b/JricaStudioWebApi.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <File Include="Data\JaysLashes.db" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.11" />
@@ -35,9 +39,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Data\JaysLashes.db">
+    <Resource Include="Data\JaysLashes.db">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    </Resource>
   </ItemGroup>
 
 </Project>
