--- a/JricaStudioWebApi.csproj
+++ b/JricaStudioWebApi.csproj
@@ -40,7 +40,7 @@
 
   <ItemGroup>
     <Resource Include="Data\JaysLashes.db">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
 
